# oop_laba_4_belyak_andrei

./: .gitignore  README.md
include/: Array.h  Figure.h  Hexagon.h  Octagon.h  Point.h  Triangle.h
src/: CMakeLists.txt  main.cpp
test/: test_array.cpp  test_figures.cpp  test_geometry_functions.cpp  test_point.cpp
